ecmascript/parser/tests/test262-error-references/fail/3118eaa619345896.js.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/3118eaa619345896.js:2:3
  |
2 | */]
  |   ^

